is this committed

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+
  <!Doctype html>
 <html>
 
 <head>
      <title>HTML Application</title>
+     <title>More changes</title>
+     <title>Edit Application</title>
 	 <link href="css/site.css" rel="stylesheet">
 </head>
 
